# Pickleball-Analyzer-v2

./: .env.example  .gitignore  ARCHITECTURE.md  KNOWN_ISSUES.md  README.md  SYSTEM_DESIGN.md  pyproject.toml  requirements.txt
app/: README.md  __init__.py  __main__.py  browse.py  drivesync.py  pipeline.py  server.py  sessions.py  test_app.py  test_drivesync.py  test_pipeline.py  video.py
app/static/: app.js  index.html  styles.css
docs/: ACCURACY_LEDGER.md  DATA_COLLECTION_PLAN.md  PRODUCT_VISION.md  SESSION_HANDOFF.md  UI_PLAN.md  USABILITY_BACKLOG.md  USAPA_REALIGN_DESIGN.md
samples/: README.md
stages/: infer_vision.ipynb
stages/02_track_players/: contract.md
stages/03_pose/: contract.md
stages/04_track_ball/: contract.md
stages/05_detect_shots/: contract.md
stages/06_classify_shots/: contract.md
stages/07_segment_rallies/: contract.md
stages/08_compute_metrics/: contract.md
stages/09_rate/: contract.md
stages/10_plan_improvement/: contract.md
stages/11_render/: contract.md
stages/ball_trajectory/: ball_trajectory.py  contract.md  test_ball_trajectory.py
stages/calibrate/: __init__.py  api.py  calibrate.py  contract.md  test_calibrate.py
stages/classify_shots/: classify_shots.py  (+2 more)
tools/: README.md  build_infer_v4_nb.py  build_report.py  build_v4_train_bundle.py  build_vision_bundle.py  build_vision_nb.py  colab_vision.py  compress_video.py  convert_dettor_weights.py  diag_heatmaps.py  diagnose_tracknet.py  label_ball.py  mark_court.py  mark_user.py  render_rally.py  synth_ball.py  test_colab_vision.py  verify_rally_frames.py
(+53 files in other folders)
