[project]
name = "pickleball-analyzer-v2"
version = "0.0.1"
description = "Layered pipeline for analyzing amateur pickleball match video"
requires-python = ">=3.11"

dependencies = [
    "opencv-python-headless>=4.10",
    "numpy>=2.0,<2.3",
    "pandas>=2.2",
    "pyarrow>=16",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "python-multipart>=0.0.9",
    "imageio-ffmpeg>=0.5",    # portable ffmpeg (libx264) for browser-playable H.264 web video
]

[project.optional-dependencies]
ml = [
    "ultralytics>=8.3",
    "torch>=2.4",
    "torchvision>=0.19",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"